# Android-Project-generator

./: .gitignore  README.md  pyproject.toml
composeforge/: __init__.py  __main__.py
composeforge/cli/: colors.py  display.py  prompts.py
composeforge/core/: config.py  constants.py  writer.py
composeforge/generator/: engine.py  structure.py
composeforge/templates/: gradle.py  manifest.py  misc.py  resources.py
composeforge/templates/kotlin/: activity.py  core.py  database.py  di.py  navigation.py  network.py  repository.py  screens.py  tests.py  theme.py  viewmodel.py
